k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sammy-shop-service

spec:
  selector:
    app: sammy-shop

  ports:
  - port: 80
    targetPort: 5001

  type: NodePort
