k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sammy-shop-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: sammy-shop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sammy-shop-service
                port:
                  number: 80
